--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@55141def]">runScenario</td> 
-  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:44</td>   <td>-1609</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runner.CucumberRunnerTests@55141def]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="6c77c7">  <td>23/05/24 13:36:46</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberRunnerTests@55141def]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/05/25 11:10:50</td>   <td>0</td> <td title="&lt;&lt;CucumberRunnerTests.generateReport()[pri:0, instance:runner.CucumberRunnerTests@13c9d689]">&lt;&lt;generateReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/05/25 11:08:17</td>   <td>-153210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunnerTests@13c9d689]">runScenario</td> 
+  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/05/25 11:08:15</td>   <td>-155414</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runner.CucumberRunnerTests@13c9d689]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/05/25 11:08:30</td>   <td>-140128</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberRunnerTests@13c9d689]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278852808</td>   <td></td> </tr>
 </table>
