--- a/test-reports/cucumber-html-reports/overview-steps.html
+++ b/test-reports/cucumber-html-reports/overview-steps.html
@@ -56,6 +56,7 @@ $(document).ready(function() {
         <li role="presentation" ><a href="overview-features.html">Features</a></li>
         <li role="presentation" ><a href="overview-tags.html">Tags</a></li>
         <li role="presentation"     class="active" ><a href="overview-steps.html">Steps</a></li>
+          <li role="presentation" ><a href="overview-trends.html">Trends</a></li>
         <li role="presentation" ><a href="overview-failures.html">Failures</a></li>
       </ul>
     </div>
@@ -78,7 +79,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>cucumberProject</td>
         <td>1</td>
-      <td>25 May 2023, 11:10</td>
+      <td>25 May 2023, 15:10</td>
     </tr>
   </tbody>
 </table>
@@ -117,53 +118,61 @@ $(document).ready(function() {
         <tbody>
             <tr>
               <td class="location">definitions.Hooks.setUp()</td>
-              <td>1</td>
-              <td class="duration" data-value="12485152200">12.485</td>
-              <td class="duration" data-value="12485152200">12.485</td>
-              <td class="duration" data-value="12485152200">12.485</td>
-              <td class="failed">0.00%</td>
+              <td>2</td>
+              <td class="duration" data-value="15624999850">15.624</td>
+              <td class="duration" data-value="15624999850">17.239</td>
+              <td class="duration" data-value="31249999700">31.249</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">definitions.Hooks.tearDown(io.cucumber.java.Scenario)</td>
-              <td>1</td>
-              <td class="duration" data-value="5000300">0.005</td>
-              <td class="duration" data-value="5000300">0.005</td>
-              <td class="duration" data-value="5000300">0.005</td>
-              <td class="failed">0.00%</td>
+              <td>2</td>
+              <td class="duration" data-value="3860996900">3.860</td>
+              <td class="duration" data-value="3860996900">5.381</td>
+              <td class="duration" data-value="7721993800">7.721</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">definitions.LoginPageDefinitions.goToHomePage(java.lang.String,java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="1003800">0.001</td>
-              <td class="duration" data-value="1003800">0.001</td>
-              <td class="duration" data-value="1003800">0.001</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="2433996500">2.433</td>
+              <td class="duration" data-value="2433996500">2.433</td>
+              <td class="duration" data-value="2433996500">2.433</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">definitions.LoginPageDefinitions.loginTest(java.lang.String)</td>
+              <td>2</td>
+              <td class="duration" data-value="7212503450">7.212</td>
+              <td class="duration" data-value="7212503450">8.235</td>
+              <td class="duration" data-value="14425006900">14.425</td>
+              <td class="passed">100.00%</td>
+            </tr>
+            <tr>
+              <td class="location">definitions.LoginPageDefinitions.verifyFaceBookIcon()</td>
               <td>1</td>
-              <td class="duration" data-value="4000700">0.004</td>
-              <td class="duration" data-value="4000700">0.004</td>
-              <td class="duration" data-value="4000700">0.004</td>
+              <td class="duration" data-value="20062995100">20.062</td>
+              <td class="duration" data-value="20062995100">20.062</td>
+              <td class="duration" data-value="20062995100">20.062</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">definitions.LoginPageDefinitions.verifyLogin()</td>
               <td>1</td>
-              <td class="duration" data-value="1000500">0.001</td>
-              <td class="duration" data-value="1000500">0.001</td>
-              <td class="duration" data-value="1000500">0.001</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="489998000">0.489</td>
+              <td class="duration" data-value="489998000">0.489</td>
+              <td class="duration" data-value="489998000">0.489</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
         <tfoot class="total">
           <tr>
-            <td>5</td>
-            <td>5</td>
-            <td class="duration">2.499</td>
-            <td class="duration">12.485</td>
-            <td class="duration">12.496</td>
+            <td>6</td>
+            <td>9</td>
+            <td class="duration">8.487</td>
+            <td class="duration">31.249</td>
+            <td class="duration">1:16.383</td>
             <td>Totals</td>
           </tr>
         </tfoot>
