--- a/test-reports/cucumber-html-reports/report-tag_284256703.html
+++ b/test-reports/cucumber-html-reports/report-tag_284256703.html
@@ -56,6 +56,7 @@ $(document).ready(function() {
         <li role="presentation" ><a href="overview-features.html">Features</a></li>
         <li role="presentation" ><a href="overview-tags.html">Tags</a></li>
         <li role="presentation" ><a href="overview-steps.html">Steps</a></li>
+          <li role="presentation" ><a href="overview-trends.html">Trends</a></li>
         <li role="presentation" ><a href="overview-failures.html">Failures</a></li>
       </ul>
     </div>
@@ -78,7 +79,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>cucumberProject</td>
         <td>1</td>
-      <td>25 May 2023, 11:10</td>
+      <td>25 May 2023, 15:10</td>
     </tr>
   </tbody>
 </table>
@@ -131,19 +132,19 @@ $(document).ready(function() {
         <tbody>
         <tr>
           <td class="tagname">@ValidCredentials</td>
+          <td      class="passed"    >3</td>
           <td >0</td>
           <td >0</td>
-          <td     class="skipped"   >3</td>
           <td >0</td>
           <td >0</td>
           <td class="total">3</td>
 
+          <td  class="passed"    >1</td>
           <td >0</td>
-          <td  class="failed"    >1</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="6005000">0.006</td>
-          <td class="failed">Failed</td>
+          <td class="duration" data-value="9113997200">9.113</td>
+          <td class="passed">Passed</td>
         </tr>
         </tbody>
 
@@ -186,12 +187,12 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">0.006</span>
+  <span class="lead-duration duration">9.113</span>
 
 
-  <span data-toggle="collapse" class=" collapsable-control" data-target="#element-1">
+  <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
-<div class="brief failed">
+<div class="brief passed">
   <span class="keyword indention">Scenario</span>
   <span class="name">Login with valid credentials</span>
 
@@ -206,9 +207,9 @@ $(document).ready(function() {
 
 
   <div class="inner-level hooks-element-before">
-    <div data-toggle="collapse" class=" collapsable-control" data-target="#before-2">
+    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#before-2">
 
-<div class="brief failed">
+<div class="brief passed">
   <span class="keyword indention">Hooks</span>
   <span class="name"></span>
 
@@ -220,46 +221,15 @@ $(document).ready(function() {
 
     <div id="before-2" class="inner-level collapse collapsable-details  in ">
         <div class="hook">
-          <div class="brief failed">
+          <div class="brief passed">
             <span class="keyword indention">Before</span>
               <span class="location name">definitions.Hooks.setUp()</span>
 
-  <span class="lead-duration duration">12.485</span>
+  <span class="lead-duration duration">17.239</span>
 
           </div>
 
 
-
-  <div class="inner-level">
-    <div class="message indention">
-      <div data-toggle="collapse" class=" collapsable-control" data-target="#msg-3">
-          <a>Error message</a>
-      </div>
-      <div id="msg-3" class="collapse collapsable-details  in ">
-        <pre>org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Response code 500. Message: Process unexpectedly closed with status 0
-Build info: version: '4.3.0', revision: 'a4995e2c09*'
-System info: host: 'HASSEN-HP', ip: '192.168.209.1', os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.6'
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: true, browserName: firefox, moz:debuggerAddress: true, moz:firefoxOptions: {}}], desiredCapabilities=Capabilities {acceptInsecureCerts: true, browserName: firefox, moz:debuggerAddress: true, moz:firefoxOptions: {}}}]
-	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:144)
-	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:102)
-	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:67)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:156)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:569)
-	at org.openqa.selenium.remote.RemoteWebDriver.startSession(RemoteWebDriver.java:264)
-	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:179)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:110)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:98)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:94)
-	at utils.HelperClass.&lt;init&gt;(HelperClass.java:21)
-	at utils.HelperClass.setUpDriver(HelperClass.java:37)
-	at definitions.Hooks.setUp(Hooks.java:17)
-</pre>
-      </div>
-    </div>
-  </div>
 
 
 
@@ -272,7 +242,7 @@ Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: tru
 
 
 <div class="steps inner-level">
-  <div data-toggle="collapse" class=" collapsable-control" data-target="#steps-4">
+  <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#steps-3">
 
 <div class="brief passed">
   <span class="keyword indention">Steps</span>
@@ -284,15 +254,15 @@ Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: tru
 
   </div>
 
-  <div id="steps-4" class="inner-level collapse collapsable-details  in ">
+  <div id="steps-3" class="inner-level collapse collapsable-details  in ">
       <div class="step">
 
 
-<div class="brief step-name-Given skipped">
+<div class="brief step-name-Given passed">
   <span class="keyword indention">Given</span>
   <span class="name">User is on HRMLogin page <span class="argument">&quot;https://opensource-demo.orangehrmlive.com/&quot;</span></span>
 
-  <span class="lead-duration duration">0.004</span>
+  <span class="lead-duration duration">6.190</span>
 
 </div>
 
@@ -315,11 +285,11 @@ Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: tru
       <div class="step">
 
 
-<div class="brief step-name-When skipped">
+<div class="brief step-name-When passed">
   <span class="keyword indention">When</span>
   <span class="name">User enters username as <span class="argument">&quot;Admin&quot;</span> and password as <span class="argument">&quot;admin123&quot;</span></span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">2.433</span>
 
 </div>
 
@@ -342,11 +312,11 @@ Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: tru
       <div class="step">
 
 
-<div class="brief step-name-Then skipped">
+<div class="brief step-name-Then passed">
   <span class="keyword indention">Then</span>
   <span class="name">User should be able to login sucessfully and new page open</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.489</span>
 
 </div>
 
@@ -373,9 +343,9 @@ Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: tru
 
 
   <div class="inner-level hooks-element-after">
-    <div data-toggle="collapse" class=" collapsable-control" data-target="#after-5">
+    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-4">
 
-<div class="brief failed">
+<div class="brief passed">
   <span class="keyword indention">Hooks</span>
   <span class="name"></span>
 
@@ -385,31 +355,17 @@ Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: tru
 
     </div>
 
-    <div id="after-5" class="inner-level collapse collapsable-details  in ">
+    <div id="after-4" class="inner-level collapse collapsable-details  in ">
         <div class="hook">
-          <div class="brief failed">
+          <div class="brief passed">
             <span class="keyword indention">After</span>
               <span class="location name">definitions.Hooks.tearDown(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.005</span>
+  <span class="lead-duration duration">5.381</span>
 
           </div>
 
 
-
-  <div class="inner-level">
-    <div class="message indention">
-      <div data-toggle="collapse" class=" collapsable-control" data-target="#msg-6">
-          <a>Error message</a>
-      </div>
-      <div id="msg-6" class="collapse collapsable-details  in ">
-        <pre>java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.TakesScreenshot.getScreenshotAs(org.openqa.selenium.OutputType)&quot; because the return value of &quot;utils.HelperClass.getDriver()&quot; is null
-	at utils.ScreenshotUtils.getBase64Screenshot(ScreenshotUtils.java:15)
-	at definitions.Hooks.tearDown(Hooks.java:24)
-</pre>
-      </div>
-    </div>
-  </div>
 
 
 
